--- a/TCG.html
+++ b/TCG.html
@@ -39,7 +39,7 @@
                         flex:1;
                         min-width:45%;
                         background:#2a4b9a;   /* blue background */
-                        color:#fff;           /* white text */
+                        color:##00897b;           /* white text */
                         border:none;
                         border-radius:8px;
                         padding:10px;
@@ -346,4 +346,5 @@ $('#btnPlayAgain')?.addEventListener('click', ()=>{ show('start'); });
 
 </body>
 </html>
+
 
