--- a/TCG.html
+++ b/TCG.html
@@ -35,16 +35,17 @@
     .danger{background:#6a1e1e}
 
     .lifelines{display:flex;flex-wrap:wrap;gap:6px;margin-top:12px}
-    .lifelines button {
-                        flex:1;
-                        min-width:45%;
-                        background:#2a4b9a;   /* blue background */
-                        color:##00897b;           /* white text */
-                        border:none;
-                        border-radius:8px;
-                        padding:10px;
-                        font-weight:600;
-                        cursor:pointer;}
+    .lifelines button{
+      flex:1; min-width:45%;
+      background:#2a4b9a;  /* default blue */
+      color:#fff;
+      border:none;border-radius:8px;padding:10px;font-weight:600;cursor:pointer
+    }
+    /* optional distinct colors */
+    #ll5050{background:#2a4b9a}
+    #llAudience{background:#00897b}
+    #llPhone{background:#f57c00}
+    #llFlip{background:#6a1b9a}
 
     #ladder{list-style:none;padding:0;margin-top:12px;font-size:14px;max-height:200px;overflow:auto}
     #ladder li{display:flex;justify-content:space-between;padding:6px;border-radius:6px;background:#0f1732;margin-bottom:4px}
@@ -72,21 +73,46 @@
     .splash .skip{ margin-top:8px; padding:10px 14px; border-radius:999px; border:1px solid #2a3a66; background:#16234a; color:#fff }
     .fadeout { animation: fadeout .6s ease forwards; }
     @keyframes fadeout { to { opacity:0; transform:scale(.985) } }
+
+    /* --- Mode screen --- */
+    .mode-cards{display:grid;gap:10px;margin-top:8px}
+    .mode-card{
+      display:flex;flex-direction:column;align-items:flex-start;gap:4px;
+      background:#1b2238;border:1px solid #2a3a66;color:#e8f0ff;
+      border-radius:10px;padding:12px;text-align:left;cursor:pointer;font-size:15px
+    }
+    .mode-card strong{font-size:16px}
+    .mode-card span{font-size:13px;color:var(--muted)}
+    .mode-card:active{transform:scale(.99)}
   </style>
 </head>
 <body>
   <div class="app">
-
     <!-- INTRO SPLASH -->
     <section id="intro" class="screen active">
       <div class="panel">
         <div class="splash">
-          <img id="introImg" alt="Constitution of India — Cover"
-              src="Constitution_of_India.webp">
-
+          <img id="introImg" alt="Constitution of India — Cover" src="Constitution_of_India.webp">
           <h2>Namaste! 👋<br>Welcome to <em>Kaun Banega Samvidhan Gyani</em></h2>
           <p>Celebrate and learn the Constitution of India.<br>Tap Skip or wait a moment…</p>
           <button id="btnSkipIntro" class="skip">Skip</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- MODE SELECT (after splash) -->
+    <section id="mode" class="screen">
+      <div class="panel">
+        <h2 style="margin-bottom:10px">Choose Mode</h2>
+        <div class="mode-cards">
+          <button id="btnModePlay" class="mode-card">
+            <strong>🎮 Play</strong>
+            <span>Standard KBC-style game.</span>
+          </button>
+          <button id="btnModeLearn" class="mode-card">
+            <strong>📘 Learn</strong>
+            <span>Start with very basic questions. No timer.</span>
+          </button>
         </div>
       </div>
     </section>
@@ -95,7 +121,7 @@
     <section id="start" class="screen">
       <div class="panel">
         <h2>Rules</h2>
-        <ul style="font-size:14px;line-height:1.4;margin:10px 0 12px 16px;">
+        <ul id="rulesList" style="font-size:14px;line-height:1.4;margin:10px 0 12px 16px;">
           <li>15 questions. Answer correctly to climb the ladder.</li>
           <li>Safety levels at Q5 and Q10.</li>
           <li>Use lifelines: 50:50, Audience, Phone, Flip.</li>
@@ -148,34 +174,72 @@
 
     <div id="toast"></div>
   </div>
+
 <script>
-// =============== INTRO SPLASH (kept) ===============
+// =============== SPLASH → MODE ===============
 (function initIntro(){
   const intro = document.getElementById('intro');
-  const start = document.getElementById('start');
-  const skipBtn = document.getElementById('btnSkipIntro');
-  if (start) start.classList.remove('active');
-  function goToStart(){
+  const mode  = document.getElementById('mode');
+  mode.classList.remove('active'); // ensure hidden initially
+  function goToMode(){
     intro.classList.add('fadeout');
-    setTimeout(()=>{
-      intro.classList.remove('active');
-      if (start) start.classList.add('active');
-    }, 600);
+    setTimeout(()=>{ intro.classList.remove('active'); mode.classList.add('active'); }, 600);
   }
-  const t = setTimeout(goToStart, 3500);
-  if (skipBtn) skipBtn.addEventListener('click', ()=>{ clearTimeout(t); goToStart(); });
+  const skipBtn = document.getElementById('btnSkipIntro');
+  const t = setTimeout(goToMode, 3500);
+  if (skipBtn) skipBtn.addEventListener('click', ()=>{ clearTimeout(t); goToMode(); });
 })();
 
-// =============== QUIZ LOGIC (new) ===============
+// =============== MODE STATE ===============
+let MODE = 'play';           // 'play' | 'learn'
+let TIMER_ENABLED = true;    // no timer in learn
+
+const BASIC_QUESTIONS = [
+  {q:"When did the Constitution of India come into effect?", opts:["26 January 1950","15 August 1947","26 November 1949","1 January 1950"], answer:0},
+  {q:"Who is known as the 'Father of the Indian Constitution'?", opts:["B. R. Ambedkar","Jawaharlal Nehru","Sardar Patel","Rajendra Prasad"], answer:0},
+  {q:"Which part of the Constitution contains the Fundamental Rights?", opts:["Part III","Part IV","Part V","Part I"], answer:0},
+  {q:"The Preamble declares India to be a _____ Republic.", opts:["Sovereign Socialist Secular Democratic","Sovereign Democratic","Federal Democratic","Unitary Socialist"], answer:0},
+  {q:"What does Article 21 guarantee?", opts:["Protection of life and personal liberty","Prohibition of discrimination","Freedom of speech and expression","Right against exploitation"], answer:0},
+  {q:"Right to Education as a Fundamental Right is which Article?", opts:["Article 21A","Article 45","Article 19(1)(a)","Article 23"], answer:0},
+  {q:"Which Schedule lists languages recognized by the Constitution?", opts:["Eighth Schedule","Seventh Schedule","Tenth Schedule","Twelfth Schedule"], answer:0},
+  {q:"Directive Principles of State Policy are in which Part?", opts:["Part IV","Part III","Part VI","Part IX"], answer:0},
+  {q:"Who administers the oath of office to the President of India?", opts:["Chief Justice of India","Prime Minister","Speaker of Lok Sabha","Attorney General"], answer:0},
+  {q:"Which amendment lowered the voting age from 21 to 18?", opts:["61st Amendment","42nd Amendment","44th Amendment","73rd Amendment"], answer:0},
+];
+
+(function initMode(){
+  const startScreen = document.getElementById('start');
+  const playBtn  = document.getElementById('btnModePlay');
+  const learnBtn = document.getElementById('btnModeLearn');
+  const rules    = document.getElementById('rulesList');
+
+  function showStartFor(mode){
+    MODE = mode;
+    TIMER_ENABLED = (mode === 'play');
+    document.querySelectorAll('.screen').forEach(s=>s.classList.remove('active'));
+    startScreen.classList.add('active');
+    if (rules){
+      rules.innerHTML = (MODE==='play')
+        ? `<li>15 questions. Answer correctly to climb the ladder.</li>
+           <li>Safety levels at Q5 and Q10.</li>
+           <li>Use lifelines: 50:50, Audience, Phone, Flip.</li>`
+        : `<li>Learn mode: very basic questions to get you started.</li>
+           <li>No timer. Take your time to read.</li>
+           <li>You can still use lifelines.</li>`;
+    }
+  }
+  playBtn?.addEventListener('click', ()=> showStartFor('play'));
+  learnBtn?.addEventListener('click', ()=> showStartFor('learn'));
+})();
+
+// =============== QUIZ LOGIC ===============
 const $ = (q)=>document.querySelector(q);
 const $$ = (q)=>Array.from(document.querySelectorAll(q));
 const shuffle = a=>a.map(x=>[Math.random(),x]).sort((x,y)=>x[0]-y[0]).map(([,v])=>v);
 
-// Money ladder (Q1..Q15)
 const MONEY = [1000,2000,3000,5000,10000,20000,40000,80000,160000,320000,640000,1250000,2500000,5000000,10000000];
-const SAFE = new Set([4,9]); // Q5, Q10 (zero-indexed)
+const SAFE = new Set([4,9]); // Q5, Q10
 
-// Question bank (15)
 const QUESTIONS = [
   {q:"When did the Constitution of India come into effect?", opts:["26 January 1950","15 August 1947","26 November 1949","1 January 1950"], answer:0},
   {q:"Who is known as the 'Father of the Indian Constitution'?", opts:["B. R. Ambedkar","Jawaharlal Nehru","Sardar Patel","Rajendra Prasad"], answer:0},
@@ -194,21 +258,17 @@ const QUESTIONS = [
   {q:"Which Schedule deals with the Anti-defection law?", opts:["Tenth Schedule","Ninth Schedule","Eleventh Schedule","Twelfth Schedule"], answer:0}
 ];
 
-// Elements
 const screens = { start:$('#start'), game:$('#game'), result:$('#result') };
 const qEl = $('#question'), optsEl = $('#options'), timerEl = $('#timer'), barEl = $('#timeBar');
 const lockBtn = $('#btnLock'), nextBtn = $('#btnNext'), quitBtn = $('#btnQuit'), startBtn = $('#btnStart');
 const resultText = $('#resultText'), winningsEl = $('#winnings'), ladderEl = $('#ladder');
 const toast = (t)=>{ const n=$('#toast'); n.textContent=t; n.classList.add('show'); setTimeout(()=>n.classList.remove('show'), 2200); };
 
-// State
 let order = [], qIndex = 0, selection = null, timer = null, timeLeft = 45, winnings = 0, maxReached = -1;
 let usedLL = { fifty:false, aud:false, phone:false, flip:false };
 
-// Screen helpers
 function show(id){ Object.values(screens).forEach(s=>s.classList.remove('active')); screens[id].classList.add('active'); }
 
-// Ladder render
 function renderLadder(){
   ladderEl.innerHTML = '';
   MONEY.forEach((amt,i)=>{
@@ -220,9 +280,16 @@ function renderLadder(){
   });
 }
 
-// Start game
 function startGame(){
-  order = shuffle(QUESTIONS.slice()); // 15 shuffled
+  // pick bank based on mode
+  const bank = (MODE==='learn') ? BASIC_QUESTIONS.slice() : QUESTIONS.slice();
+  order = shuffle(bank);
+  if (order.length < 15){
+    const extra = shuffle(QUESTIONS.filter(q=>!order.includes(q))).slice(0, 15 - order.length);
+    order = order.concat(extra);
+  }
+  order = order.slice(0,15);
+
   qIndex = 0; selection = null; winnings = 0; maxReached = -1;
   usedLL = { fifty:false, aud:false, phone:false, flip:false };
   renderLadder();
@@ -230,7 +297,6 @@ function startGame(){
   renderQuestion();
 }
 
-// Render a question
 function renderQuestion(){
   const q = order[qIndex];
   qEl.textContent = q.q;
@@ -246,7 +312,14 @@ function renderQuestion(){
   $$('#ladder li').forEach(li=>li.classList.remove('current'));
   const currentLi = $$('#ladder li')[qIndex]; if (currentLi) currentLi.classList.add('current');
   lockBtn.disabled = true; nextBtn.disabled = true;
-  startTimer(45);
+
+  if (TIMER_ENABLED){
+    startTimer(45);
+  } else {
+    clearTimer();
+    timerEl.textContent = '∞';
+    barEl.style.width = '0%';
+  }
 }
 
 function selectOption(i,node){
@@ -287,7 +360,6 @@ function nextQuestion(){
 function quitGame(){ endGame(true, true); }
 
 function endGame(completed, quit=false){
-  // safe fallback if lost
   let final = winnings;
   if(!completed && !quit){
     let safe=0; for (const s of [...SAFE].sort((a,b)=>a-b)){ if(maxReached>=s) safe=MONEY[s]; }
@@ -317,8 +389,8 @@ function updateTimerUI(){
 }
 function clearTimer(){ if(timer){ clearInterval(timer); timer=null; } }
 
-// Lifelines (minimal functioning 50:50; others show a helpful toast)
-$('#ll5050').addEventListener('click', ()=>{
+// Lifelines
+document.getElementById('ll5050').addEventListener('click', ()=>{
   if (usedLL.fifty) return;
   usedLL.fifty = true;
   const correct = order[qIndex].answer;
@@ -326,25 +398,23 @@ $('#ll5050').addEventListener('click', ()=>{
   $$('.opt').forEach((o,i)=>{ if(hide.includes(i)){ o.style.display='none'; o.disabled=true; } });
   toast('🪙 50:50 used.');
 });
-$('#llAudience').addEventListener('click', ()=> toast('📊 Audience suggests: option likely correct! (demo)'));
-$('#llPhone').addEventListener('click', ()=> toast('📞 Friend: I think it’s correct! (demo)'));
-$('#llFlip').addEventListener('click', ()=>{
+document.getElementById('llAudience').addEventListener('click', ()=> toast('📊 Audience suggests: option likely correct! (demo)'));
+document.getElementById('llPhone').addEventListener('click', ()=> toast('📞 Friend: I think it’s correct! (demo)'));
+document.getElementById('llFlip').addEventListener('click', ()=>{
   if (usedLL.flip) return; usedLL.flip = true;
   toast('🔄 Flipped! New question.');
   renderQuestion();
 });
 
-// Wire buttons
-startBtn.addEventListener('click', ()=> startGame());
-lockBtn.addEventListener('click', ()=> lockAnswer());
-nextBtn.addEventListener('click', ()=> nextQuestion());
-quitBtn.addEventListener('click', ()=> quitGame());
-
-// Allow Play Again
-$('#btnPlayAgain')?.addEventListener('click', ()=>{ show('start'); });
+// Buttons
+document.getElementById('btnStart').addEventListener('click', startGame);
+document.getElementById('btnLock').addEventListener('click', lockAnswer);
+document.getElementById('btnNext').addEventListener('click', nextQuestion);
+document.getElementById('btnQuit').addEventListener('click', quitGame);
+document.getElementById('btnPlayAgain')?.addEventListener('click', ()=>{ 
+  document.querySelectorAll('.screen').forEach(s=>s.classList.remove('active'));
+  document.getElementById('mode').classList.add('active'); // back to mode choose
+});
 </script>
-
 </body>
 </html>
-
-
