--- a/TCG.html
+++ b/TCG.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <img alt="Visits"
+     src="https://hits.seeyoufarm.dev/api/count/incr/badge.svg?url=https://linkinshakya.github.io/test1/kbc.html&title=Visits&edge_flat=true">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
@@ -667,3 +670,4 @@ document.getElementById('btnPlayAgain')?.addEventListener('click', ()=>{
 </script>
 </body>
 </html>
+
